<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.SignUpFragment">
  <EditText
      android:id="@+id/firstname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      android:gravity="center_vertical"
      android:hint="@string/firstname"/>
  <EditText
      android:id="@+id/lastname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      android:gravity="center_vertical"
      android:hint="@string/lastname"/>
  <EditText
      android:id="@+id/tk"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      android:gravity="center_vertical"
      android:hint="@string/email"/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/mk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>