<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.GetCodePhoneFragment"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/backFragmentcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:layout_margin="25dp"/>
    <TextView
        style="@style/enter_your_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/enter_code" />

    <TextView
        style="@style/please_conf"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="6sp"
        android:maxLines="2"
        android:text="@string/we_have_sent"
        android:translationY="-3.21sp" />
        <EditText
            android:id="@+id/getcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_margin="40dp"
            android:textAlignment="center"/>
    <TextView
        android:id="@+id/txtsendcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_code"
        style="@style/resendcode"
        android:layout_gravity="center_horizontal"
        android:textColor="#002DE3"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />
</LinearLayout>