<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CreateProfileFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/backProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/your_profile"
        app:drawableStartCompat="@drawable/back"
        />


        <ImageView
            android:id="@+id/bgavatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/profile"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:shapeAppearanceOverlay="@style/ImageView.Corner.20"
            android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/user_name"
        android:textAlignment="center"
        android:backgroundTint="@color/white"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:elegantTextHeight="true"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:text="@string/save"
        android:gravity="center"
        android:textColor="@color/white"
        android:elevation="5dp"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:lottie_rawRes="@raw/loading"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="30dp"
        app:lottie_speed="2"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>
</LinearLayout>